package Architecture_op.HW_8;

public class EmployeeView {
    public void printEmployeeInformation(EmployeeModel emp){
        System.out.println(" ID="+emp.getId()+"\n Name="+emp.getName()+"\n Job="+emp.getJob());
    }
}
